...
  }

  return (
    <Screen>
      <View className="flex-1">
        <ScrollView
          testID="home-screen"
          contentContainerStyle={{ paddingBottom: 24 }}
          showsVerticalScrollIndicator={false}
        >
          {/* Top bar */}
          <View className="pt-safe-offset-2 px-5 pb-2">
            <View className="flex-row items-center justify-between">
...
